# ghostdb

./: README.md  pyproject.toml
examples/: openai_embeddings_from_text.py
ghostdb/: ghost_storage.py  hnswlib_index.py  test_hnsw.py  text_storage.py
pyghostdb/: ghost_storage.py  hnswlib_index.py  parquet_conversion.py  test_hnsw.py  text_storage.py
