[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pyghostdb"
version = "0.0.5"
description = "GhostDB is a fast, lightweight embedding similarity search database."
authors = [{name="Fedor Shabashev", email="fedor.shabashev@gmail.com"}]

dependencies = [
"numpy >=1.21.0",
"hnswlib >=0.5.2",
"duckdb >=0.2.9",
"pyarrow>=5.0.0",
]

[project.urls]
GitHub = "https://github.com/ghost-db/ghostdb"
